Refactor catalog validation